# eca

./: .gitignore  README-eca.md  README.md  ROADMAP.md  SKILL.md  pyproject.toml
data/: dashboard.md
data/aapl/: brief.md  metrics-raw.json
data/abnb/: brief.md
data/afrm/: brief.md
data/amzn/: brief.md  metrics-raw.json
data/asts/: brief.md  metrics-raw.json
data/axp/: brief.md
data/cifr/: brief.md  metrics-raw.json
data/cof/: brief.md
data/coin/: brief.md  metrics-raw.json
data/cost/: brief.md
data/goog/: brief.md  metrics-raw.json
data/hims/: brief.md
data/iren/: brief.md  metrics-raw.json
data/jpm/: brief.md
data/lmnd/: brief.md
data/meta/: brief.md  metrics-raw.json
data/msft/: brief.md  metrics-raw.json
data/mstr/: brief.md  metrics-raw.json
data/nflx/: brief.md
data/nvda/: brief.md  metrics-raw.json
data/open/: brief.md
data/pltr/: brief.md  metrics-raw.json
data/rklb/: brief.md  metrics-raw.json
data/root/: brief.md
data/shop/: brief.md
data/spot/: brief.md
data/synthesis/: ai-2026-03-30.md  consumer-2026-03-30.md  consumer-2026-04-05.md  crypto-2026-03-30.md  employer-2026-03-30.md  infra-2026-03-22.md  infra-2026-03-30.md  (+1 more)
docs/: transcript-sourcing-todo.md
skills/: base.md  dashboard-narrative.md  insurtech.md  synthesis-brief.md  synthesis-sector.md
tests/: test_analyze.py  test_config.py  test_dashboard.py  test_db.py  test_grade_parser.py  test_ingest_metrics.py  test_ingest_transcript.py  test_migration.py  test_query.py  test_schema.py  test_synthesize.py  test_waterfall.py  test_yfinance_fetcher.py
(+1189 files in other folders)
