[project]
name = "eca"
version = "0.1.0"
description = "Earnings Call Analyzer - atomic data pipeline for candor analysis"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "anthropic>=0.40.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
eca = "eca.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
